finish lab2