@@ -1,44 +1,43 @@
 package ferym.project.service;
 
 import ferym.project.dto.SoftwareDto;
-import ferym.project.exception.InstanceNotFoundException;
 import ferym.project.mapper.SoftwareMapper;
 import ferym.project.model.Software;
 import ferym.project.repository.SoftwareRepository;
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class SoftwareService {
-    private final SoftwareRepository repository;
+    private final SoftwareRepository softwareRepository;
     private final SoftwareMapper mapper;
 
+    @Transactional(readOnly = true)
     public List<SoftwareDto> getAll() {
-        return repository.findAll().stream()
-                .map(mapper::toDto)
-                .toList();
+        return softwareRepository.findAll().stream().map(mapper::toDto).collect(Collectors.toList());
     }
 
+    @Transactional(readOnly = true)
     public SoftwareDto getById(Long id) {
-        return repository.findById(id)
-                .map(mapper::toDto)
-                .orElseThrow(() -> new InstanceNotFoundException("ПО не найдено с id: " + id));
+        return softwareRepository.findById(id).map(mapper::toDto)
+                .orElseThrow(() -> new RuntimeException("ПО не найдено"));
     }
 
     @Transactional
     public SoftwareDto create(SoftwareDto dto) {
         Software entity = mapper.toEntity(dto);
-        return mapper.toDto(repository.save(entity));
+        return mapper.toDto(softwareRepository.save(entity));
     }
 
     @Transactional
     public SoftwareDto update(Long id, SoftwareDto dto) {
-        Software entity = repository.findById(id)
-                .orElseThrow(() -> new InstanceNotFoundException("ПО не найдено с id: " + id));
+        Software entity = softwareRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("ПО не найдено"));
         entity.setName(dto.getName());
         entity.setVersion(dto.getVersion());
         return mapper.toDto(entity);
@@ -46,6 +45,6 @@ public class SoftwareService {
 
     @Transactional
     public void delete(Long id) {
-        repository.deleteById(id);
+        softwareRepository.deleteById(id);
     }
 }
